# llm-cuda

./: .gitignore  README.md  pyproject.toml  requirements.txt
runners/: bench_triton_attention.py  bench_triton_swiglu.py  build_cuda_extension.py  run_llama3.py  sweep_triton_attention_stability.py
src/llm_cuda/: __init__.py
src/llm_cuda.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/llm_cuda/kernels/: __init__.py
src/llm_cuda/kernels/cuda/: __init__.py  attention.py  extension.py  rmsnorm.py  swiglu.py
src/llm_cuda/kernels/cuda/csrc/: attention_kernel.cu  rmsnorm_extension.cpp  rmsnorm_kernel.cu  swiglu_kernel.cu
src/llm_cuda/kernels/triton/: __init__.py  adamw.py  attention.py  cross_entropy.py  decode_attention.py  rmsnorm.py  rope.py  swiglu.py
src/llm_cuda/models/llama3/: __init__.py  attention.py  block.py  config.py  kv_cache.py  mlp.py  model.py  norm.py  rotary.py
src/llm_cuda/parallel/: __init__.py  tensor_parallel.py
tests/: test_cuda_extension.py  test_llama3_shapes.py  test_tensor_parallel.py  test_triton_adamw.py  test_triton_attention.py  test_triton_cross_entropy.py  test_triton_decode_attention.py  test_triton_rope.py  test_triton_swiglu.py
