[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-cuda"
version = "0.1.0"
description = "CUDA/Triton implementation playground for LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.3.0",
  "triton>=2.3.0",
  "numpy>=1.26.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
